@@ -6,6 +6,12 @@ plugin.tx_srfreecap {
     # cat=plugin.tx_srfreecap/dims/03; type=int+; label= CAPTCHA image additional width: The width, in pixels, of the generated image is based on the maximum possible length of the word plus the value of this property.
 	imageAdditionalWidth = 75
 
+    # cat=plugin.tx_srfreecap/dims/04; type=int+; label= The horizontal (X) starting position of the word relative to the left of the image, in pixels.
+	textHorizontalPosition = 32
+
+    # cat=plugin.tx_srfreecap/dims/05; type=int+; label= The vertical (Y) starting position of the word relative to the top of the image, in pixels.
+    	textVerticalPosition = 15
+
     # cat=plugin.tx_srfreecap/dims/01; type=int+; label= Maximun word length: Maximun length of the randomly generated CAPTCHA string.
 	maxWordLength = 5
 
